--- a/style.css
+++ b/style.css
@@ -1,56 +1,49 @@
 body {
-    background-image: "assets/images/spacepicture.jpg";
-    width: 100%;
-    height: 100%;
+    color: #92c6ea;
+    background-color: #0555a7;
 }
 
-.container {
+.background {
+    background-image: url("assets/images/spacepicture.jpg");
+    background-size: cover;
+    background-blend-mode: multiply;
+}
+
+#space-hangman {
+    color: white;
+}
+
+#new-game-button {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    display: block;
     position: relative;
-    width: 100%;
-    height: 100%;
+    background-color: #92c6ea;
+    font-weight: bold;
+    color: #5f5f5e;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 25px;
+    border-radius: 20px;
+    box-shadow: 0 6px #5f5f5e;
 }
 
-
-.hangmangame {
-    width: 100%;
+#new-game-button:hover {
+    box-shadow: 0 4px #5f5f5e;
+    top: 2px;
 }
 
-img {
-    width: 100%;
-    z-index: 0;
+#new-game-button:active {
+    box-shadow: 0 0 #5f5f5e;
+    top: 6px;
 }
 
-.top { 
-    right: 300px;
-    position: absolute;
-    text-align: center;
-    font-size: 50px;
-    z-index: 1;
+#placeholder-section {
+    background-color: #0483fb;
 }
 
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-#header {
-    color: white;
-    font-family: 'Cinzel', serif;
-    font-size: 80px;
-}
-
-#choose {
-    top: 100px;
-    color: white;
-    font-family: 'Cinzel', serif;
-    font-size: 80px;
-}
-
-#word {
-    top: 100px;
-    color: white;
-    text-align: center;
-    font-size: 80px;
+#placeholders {
+    letter-spacing: 6px;
+    font-size: 40px;
 }
